--- a/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
@@ -5,46 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ProjectAtipax</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styleAtipax.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjectAtipax.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+
 
 </head>
 <body>
-    <div class="principal">
     <header class="headerAtipax">
 
-            <div class="navAtipax">
-                <nav>
-                    <a class="menu-item" asp-action="" asp-controller="Viajes"><img class="logo" src="~/img/Grupo-2 1.png"/></a>
-                        
-                        <a class="menu-item" asp-action="Index" asp-controller="Viajes">Inicio</a>
-                       
-                        <a class="menu-item" asp-action="Contacto" asp-controller="Viajes">Contáctenos</a>
-                     
-                        <a class="menu-item" asp-action="Destino" asp-controller="Viajes">Escoje tu destino</a>
-                       
-                        <a class="menu-item" asp-action="Salir" asp-controller="Viajes">Salir</a>
-  
-                </nav>
-            </div>
+        <div class="navAtipax">
+            <nav>
 
-        </header>
+                <a asp-action="" asp-controller="Viajes"><img class="logo" src="/img/Grupo-2 1.png" /></a>
+                <div class="onlyMenu">
+                    <ul>
+                        <li><a asp-action="Inicio" asp-controller="Viajes">Inicio</a></li>
+
+                        <li> <a asp-action="Contacto" asp-controller="Viajes">Contáctenos</a></li>
+
+                        <li><a asp-action="Destino" asp-controller="Viajes">Escoje tu destino</a></li>
+
+                        <li> <a asp-action="Salir" asp-controller="Viajes">Salir</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+        </div>
+
+    </header>
        <section>
             @RenderBody()
         </section>
-   
-        <footer>
-            <div class="wrapper-row">
-                <h3>Copyright © 2022 Atipax Group. Todos los derechos reservados.</h3>
-            </div>
-            <div class="footer-rs">
-                <img class="rs" src="~/imagenes/face.jpg" />
-                <img class="rs" src="~/imagenes/instagram.jpg" />
-                <img class="rs" src="~/imagenes/twitter.jpg" />
-                <img class="rs" src="~/imagenes/pinterest.jpg" />
-            </div>
-        </footer>
-        
-    </div>
+
+    <footer>
+
+        <h4>Copyright © 2022 Atipax Group. Todos los derechos reservados.</h4>
+
+
+        <ul class="redes">
+
+            <li><h4>Redes sociales:</h4></li>
+            <li><a><i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a><i class="fa-brands fa-instagram"></i></a></li>
+
+        </ul>
+
+    </footer>
+
 </body>
 </html>
