--- a/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
@@ -20,13 +20,25 @@
                 <a asp-action="" asp-controller="Viajes"><img class="logo" src="/img/Grupo-2 1.png" /></a>
                 <div class="onlyMenu">
                     <ul>
+                        
                         <li><a asp-action="Inicio" asp-controller="Viajes">Inicio</a></li>
+                     
+                        <li> <a asp-action="Contactenos" asp-controller="Viajes">Contáctenos</a></li>
+                  
+                        <li><a asp-action="EscojeDestino" asp-controller="Viajes">Escoje tu destino</a></li>
+                    
+                            <li><a asp-action="Tour" asp-controller="Viajes">Tour</a></li>
+                      
+                       
+                        <li><a asp-action="Hotel" asp-controller="Viajes">Hotel</a></li>
+                        
+                        
+                       
+                                    <li><a asp-action="Destino" asp-controller="Viajes">Destino</a></li>
+                        
+                        
 
-                        <li> <a asp-action="Contacto" asp-controller="Viajes">Contáctenos</a></li>
-
-                        <li><a asp-action="Destino" asp-controller="Viajes">Escoje tu destino</a></li>
-
-                        <li> <a asp-action="Salir" asp-controller="Viajes">Salir</a></li>
+                        <li> <a asp-action="Salir" asp-controller="Acceso">Salir<i class="fa-regular fa-right-from-bracket"></i></a></li>
                     </ul>
                 </div>
             </nav>
