--- a/ProjectAtipax/ProjectAtipax/Views/Acceso/Logueo.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Acceso/Logueo.cshtml
@@ -1,46 +1,40 @@
-﻿<!--
+﻿@model Usuario
 @{
-    Layout=null;
+    Layout = null;
 }
 
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 <head>
-      <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Logueo</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
-<h1>Logueo</h1>
+    <div class="row mt-5">
+        <div class="col-sm-4 offset-sm-4">
 
-
-<hr />
-<div class="row">
-    <div class="col-md-6">
-        <form asp-action="Logueo">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-            <div class="form-group">
-                <label asp-for="usuario" class="control-label"></label>
-                <input asp-for="usuario" class="form-control" />
-                <span asp-validation-for="usuario" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="pass" class="control-label"></label>
-                <input asp-for="pass" class="form-control" type="password" />
-                <span asp-validation-for="pass" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <input type="submit" value="Ingresar" class="btn btn-primary" />
-            </div>
+         <form asp-controller="Acceso" asp-action="Logueo" method="post">
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" asp-for="usuario">
+              </div>
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" asp-for="pass">
+              </div>
+                
+              <button type="submit" class="btn btn-primary">Ingresar</button>
         </form>
+
+
+        </div>
     </div>
-</div>
+   
 
-<div>
-    @ViewBag.mensaje
-</div>
+
 </body>
+   <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-            </html>-->
+</html>
