Mantenimiento- CREATE de hotel, tour y destino

--- a/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
@@ -27,14 +27,14 @@
                   
                         <li><a asp-action="EscojeDestino" asp-controller="Viajes">Escoje tu destino</a></li>
                     
-                            <li><a asp-action="Tour" asp-controller="Viajes">Tour</a></li>
+                            <li><a asp-action="Create" asp-controller="ManteTour">Tour</a></li>
                       
                        
-                        <li><a asp-action="Hotel" asp-controller="Viajes">Hotel</a></li>
+                        <li><a asp-action="Create" asp-controller="ManteHotel">Hotel</a></li>
                         
                         
                        
-                                    <li><a asp-action="Destino" asp-controller="Viajes">Destino</a></li>
+                        <li><a asp-action="Create" asp-controller="ManteDestino">Destino</a></li>
                         
                         
 
