creacion de procedures actualizar y metodos en el controller

--- a/ProjectAtipax/ProjectAtipax/Views/ManteTour/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteTour/Create.cshtml
@@ -41,4 +41,5 @@
 <div>
     @Html.Partial("_ParcialTour", ViewBag.tours as IEnumerable<ProjectAtipax.Models.Tour>)
 </div>
+@Html.Partial("_ParcialEdit")
 
