--- a/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Create.cshtml
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    @Html.Partial("_ParcialDestino", ViewBag.hotels as IEnumerable<ProjectAtipax.Models.Destino>)
+    @Html.Partial("_ParcialDestino", ViewBag.destinos as IEnumerable<ProjectAtipax.Models.Destino>)
 
 </div>
 
