--- a/ProjectAtipax/ProjectAtipax/Views/Atipax/Seleccionar.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Atipax/Seleccionar.cshtml
@@ -54,5 +54,6 @@
     <div class="col-sm-4">
          <img src="@Url.Content($"~/img/{Model.idDestino}.jpg")" />
     </div>
+    <div></div>
 </div>
 
