--- a/ProjectAtipax/ProjectAtipax/Views/Atipax/Seleccionar.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Atipax/Seleccionar.cshtml
@@ -1,59 +1,75 @@
 ﻿@model ProjectAtipax.Models.Destino
 
 @{
-
   ViewData["Title"] = "Seleccionar";
 }
 
 <h1>Seleccionar</h1>
 
 <div class="row">
-    <div class="col-sm-8">  
-<div>
+  <div class="col-sm-12">
     <h4>Destino</h4>
     <hr />
+  </div>
+  <div class="col-sm-8">  
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.idDestino)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.idDestino)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.pais)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.pais)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ciudad)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ciudad)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.categoria)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.categoria)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.precio)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.precio)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.idHotel)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.idHotel)
-        </dd>
-    </dl>
+    <dt class = "col-sm-2">
+      @Html.DisplayNameFor(model => model.idDestino)
+    </dt>
+    <dd class = "col-sm-10">
+      @Html.DisplayFor(model => model.idDestino)
+    </dd>
+    <dt class = "col-sm-2">
+      @Html.DisplayNameFor(model => model.pais)
+    </dt>
+    <dd class = "col-sm-10">
+      @Html.DisplayFor(model => model.pais)
+    </dd>
+    <dt class = "col-sm-2">
+      @Html.DisplayNameFor(model => model.ciudad)
+    </dt>
+    <dd class = "col-sm-10">
+      @Html.DisplayFor(model => model.ciudad)
+    </dd>
+    <dt class = "col-sm-2">
+      @Html.DisplayNameFor(model => model.categoria)
+    </dt>
+    <dd class = "col-sm-10">
+      @Html.DisplayFor(model => model.categoria)
+    </dd>
+    <dt class = "col-sm-2">
+      @Html.DisplayNameFor(model => model.precio)
+    </dt>
+    <dd class = "col-sm-10">
+      @Html.DisplayFor(model => model.precio)
+    </dd>
+    <dt class = "col-sm-2">
+      @Html.DisplayNameFor(model => model.idHotel)
+    </dt>
+    <dd class = "col-sm-10">
+      @Html.DisplayFor(model => model.idHotel)
+    </dd>
+  </dl>
+  </div>
+  <div class="col-sm-4">
+    <img src="@Url.Content($"~/img/{Model.idDestino}.jpg")" />
+  </div>
+  <!--el formulario donde ingresas la cantidad-->
+  <div class="col-sm-12">
+    <form action="Seleccionar" method="post">
+      @Html.Hidden("codigo",Model.idDestino)
+      <div class="row">
+        <div class="col-sm-2">Ingrese la cantidad</div>
+        <div class="col-sm-10">@Html.TextBox("cantidad",1)</div>
+        <div class="col-sm-12">
+          <input type="submit" value="Agregar" class="btn btn-primary" />
+          <a asp-action="Portal" class="btn btn-primary">Retornar</a>
+        </div>
+      </div>
+    </form>
+    <div>
+      @ViewBag.mensaje
     </div>
-    <div class="col-sm-4">
-         <img src="@Url.Content($"~/img/{Model.idDestino}.jpg")" />
-    </div>
-    <div></div>
+  </div>
 </div>
 
