--- a/ProjectAtipax/ProjectAtipax/Views/ManteHotel/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteHotel/Create.cshtml
@@ -5,54 +5,71 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1 class="tituloMantenimiento">Mantenimiento Tour</h1>
+@if (@ViewBag.mensaje != null)
+{
+    <div class="alert alert-primary" role="alert">
+        @ViewBag.mensaje
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
-<h4>Hotel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    </div>
+}
+
+@if (@ViewBag.mensajeEliminar != null)
+{
+    <div class="alert alert-primary" role="alert">
+        @ViewBag.mensajeEliminar
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+    </div>
+}
+<div class="masterDivision">
+    <div class="createUno">
+        <h2>Agregar Hotel:</h2>
+        <div class="formulario">
+            <form asp-action="Create" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+                <div class="col-md-5">
                 <label asp-for="idHotel" class="control-label"></label>
                 <input asp-for="idHotel" class="form-control" />
                 <span asp-validation-for="idHotel" class="text-danger"></span>
             </div>
-            <div class="form-group">
+                <div class="col-md-5">
                 <label asp-for="nomHotel" class="control-label"></label>
                 <input asp-for="nomHotel" class="form-control" />
                 <span asp-validation-for="nomHotel" class="text-danger"></span>
             </div>
-            <div class="form-group">
+                <div class="col-md-5">
                 <label asp-for="categoria" class="control-label"></label>
                 <input asp-for="categoria" class="form-control" />
                 <span asp-validation-for="categoria" class="text-danger"></span>
             </div>
-            <div class="form-group">
+                <div class="col-md-5">
                 <label asp-for="precioHotel" class="control-label"></label>
                 <input asp-for="precioHotel" class="form-control" />
                 <span asp-validation-for="precioHotel" class="text-danger"></span>
             </div>
-            <div class="form-group">
+                <div class="col-md-5">
                 <label asp-for="descripcion" class="control-label"></label>
                 <input asp-for="descripcion" class="form-control" />
                 <span asp-validation-for="descripcion" class="text-danger"></span>
             </div>
-            <div class="form-group">
+                <div class="col-md-5">
                 <label asp-for="idTour" class="control-label"></label>
-                <select asp-for ="idTour" asp-items="@ViewBag.tourLis" class="form-select"></select>
+                <select asp-for="idTour" asp-items="@ViewBag.tourLis" class="form-select"></select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                    <div class="form-group botonAgregar">
+                <input type="submit" value="Agregar Hotel" class="btn btn-primary" />
             </div>
         </form>
     </div>
-    <div>
-        @ViewBag.mensaje
+   
     </div>
-</div>
 
-<div>
+    <div class="listaDos">
+        <div class="parcialEditar">
     @Html.Partial("_ParcialHotel", ViewBag.hotels as IEnumerable<ProjectAtipax.Models.Hotel>)
+</div>
+    </div>
 </div>
 
