--- a/ProjectAtipax/ProjectAtipax/Views/ManteHotel/_ParcialHotel.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteHotel/_ParcialHotel.cshtml
@@ -26,32 +26,34 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.idHotel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.nomHotel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.categoria)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.precioHotel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.idTour)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.idHotel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.nomHotel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.categoria)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.precioHotel)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.descripcion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.idTour)
+                </td>
+                <td>
+                    @Html.ActionLink("Actualizar", "Edit", new {  id=item.idHotel })<img src="~/img/editar.png" class="editar" />
+
+                    @Html.ActionLink("Eliminar", "Delete", new {  id=item.idHotel })<img src="~/img/eliminar.png" class="eliminar" />
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
