--- a/ProjectAtipax/ProjectAtipax/Views/ManteTour/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteTour/Create.cshtml
@@ -5,40 +5,58 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h4>Tour</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="idTour" class="control-label"></label>
-                <input asp-for="idTour" class="form-control" />
-                <span asp-validation-for="idTour" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="precio" class="control-label"></label>
-                <input asp-for="precio" class="form-control" />
-                <span asp-validation-for="precio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="descripcion" class="control-label"></label>
-                <input asp-for="descripcion" class="form-control" />
-                <span asp-validation-for="descripcion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-    <div>
+<h1 class="tituloMantenimiento">Mantenimiento Tour</h1>
+@if (@ViewBag.mensaje != null)
+{
+    <div class="alert alert-primary" role="alert">
         @ViewBag.mensaje
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+    </div>
+}
+
+@if (@ViewBag.mensajeEliminar != null)
+{
+    <div class="alert alert-primary" role="alert">
+        @ViewBag.mensajeEliminar
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+    </div>
+}
+<div class="masterDivision">
+    <div class="createUno">
+        <h2>Agregar Tour:</h2>
+        <div class="formulario">
+            <form asp-action="Create" class="row g-3">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                <div class="col-md-7">
+                    <label asp-for="idTour" class="form-label">Código:</label>
+                    <input asp-for="idTour" class="form-control" />
+                    <span asp-validation-for="idTour" class="text-danger"></span>
+                </div>
+                <div class="col-md-7">
+                    <label asp-for="precio" class="form-label">Precio:</label>
+                    <input asp-for="precio" class="form-control" />
+                    <span asp-validation-for="precio" class="text-danger"></span>
+                </div>
+                <div class="col-md-7">
+                    <label asp-for="descripcion" class="form-label">Descripción:</label>
+                    <input asp-for="descripcion" class="form-control" />
+                    <span asp-validation-for="descripcion" class="text-danger"></span>
+                </div>
+                <div class="form-group botonAgregar">
+                    <input type="submit" value="Agregar Tour" class="btn btn-primary" />
+                </div>
+            </form>
         </div>
-</div>
+       
 
-<div>
-    @Html.Partial("_ParcialTour", ViewBag.tours as IEnumerable<ProjectAtipax.Models.Tour>)
 </div>
-@Html.Partial("_ParcialEdit")
-
+ 
+    <div class="listaDos">
+        <div class="parcialEditar">
+        @Html.Partial("_ParcialTour", ViewBag.tours as IEnumerable<ProjectAtipax.Models.Tour>)
+                </div>
+    </div>
+</div>
