--- a/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Edit.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Edit.cshtml
@@ -1,37 +1,26 @@
 ﻿@model ProjectAtipax.Models.Destino
 
 @{
-    ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Edit";
 }
 
-<h1 class="tituloMantenimiento">Mantenimiento Destino</h1>
-@if (@ViewBag.mensaje != null)
-{
-    <div class="alert alert-primary" role="alert">
-        @ViewBag.mensaje
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="editarCuadro">
+    <h2>Editar Destino</h2>
 
-    </div>
-}
+    @if (@ViewBag.mensajeEliminar != null)
+    {
+        <div class="alert alert-primary" role="alert">
+            @ViewBag.mensajeEditar
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
-@if (@ViewBag.mensajeEliminar != null)
-{
-    <div class="alert alert-primary" role="alert">
-        @ViewBag.mensajeEliminar
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-
-    </div>
-}
-<div class="masterDivision">
-    <div class="createUno">
-        <h2>Agregar Destino:</h2>
-        <div class="formulario">
-        <form asp-action="Create" class="row g-3">
+        </div>
+    }
+    <div class="formularioEdit">
+    <form asp-action="Edit" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="col-md-5">
                 <label asp-for="idDestino" class="control-label"></label>
-                <input asp-for="idDestino" class="form-control" />
+                <input asp-for="idDestino" class="form-control" readonly="true" />
                 <span asp-validation-for="idDestino" class="text-danger"></span>
             </div>
             <div class="col-md-5">
@@ -54,26 +43,20 @@
                 <input asp-for="UnidadesEnExistencia" class="form-control" />
                 <span asp-validation-for="UnidadesEnExistencia" class="text-danger"></span>
             </div>
-
+      
             <div class="col-md-5">
                 <label asp-for="idHotel" class="control-label"></label>
                 <select asp-for="idHotel" asp-items="@ViewBag.hotelLis" class="form-select"></select>
             </div>
-            <div class="col-md-5">
-                <label asp-for="IdCategoria" class="control-label"></label>
+        <div class="col-md-5">
+            <label asp-for="IdCategoria" class="control-label"></label>
                 <select asp-for="IdCategoria" asp-items="@ViewBag.categoriaLis" class="form-select"></select>
             </div>
-            <div class="form-group botonAgregar">
-                <input type="submit" value="Agregar Destino" class="btn btn-primary" />
+            <div class="form-group">
+                <input type="submit" value="Actualizar" class="btn btn-primary" />
+                <a asp-action="Create" class="btn btn-primary">Volver</a>
             </div>
         </form>
     </div>
-    </div>
-
-
-<div class="listaDos">
-    <div class="parcialEditar">
-    @Html.Partial("_ParcialDestino", ViewBag.destinos as IEnumerable<ProjectAtipax.Models.Destino>)
-    </div>
-</div>
+  
 </div>
