--- a/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - ProjectAtipax</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/styleAtipax.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/styleAdmi.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProjectAtipax.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -21,21 +22,39 @@
                 <a asp-action="" asp-controller="Viajes"><img class="logo" src="/img/Grupo-2 1.png" /></a>
                 <div class="onlyMenu">
                     <ul>
-                        
-                        <li><a asp-action="Inicio" asp-controller="Viajes">Inicio</a></li>
-                     
-                        <li> <a asp-action="Contactenos" asp-controller="Viajes">Contáctenos</a></li>
-                  
-           
+                        @if (User.IsInRole("Cliente"))
+                        {
+                            <li><a asp-action="Inicio" asp-controller="Viajes">Inicio</a></li>
+                        }
+                        @if (User.IsInRole("Cliente"))
+                        {
+                            <li> <a asp-action="Contactenos" asp-controller="Viajes">Contáctenos</a></li>
+                        }
+                        @if (User.IsInRole("Cliente"))
+                        {
+                            <li><a asp-action="EscojeDestino" asp-controller="Viajes">Escoje tu destino</a></li>
+                        }
+                        @if (User.IsInRole("Administrador"))
+                        {
+
+
                             <li><a asp-action="Create" asp-controller="ManteTour">Tour</a></li>
-                    
-                  
-                       
-                        <li><a asp-action="Create" asp-controller="ManteHotel">Hotel</a></li>
-                
-                        <li><a asp-action="Create" asp-controller="ManteDestino">Destino</a></li>
-                   
-                        <li> <a asp-action="Salir" asp-controller="Acceso">Salir<i class="fa-regular fa-right-from-bracket"></i></a></li>
+
+                        }
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li><a asp-action="Create" asp-controller="ManteHotel">Hotel</a></li>
+                        }
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li><a asp-action="Create" asp-controller="ManteCategoria">Categoria</a></li>
+                        }
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <li><a asp-action="Create" asp-controller="ManteDestino">Destino</a></li>
+                        }
+                      
+                        <li> <a asp-action="Salir" asp-controller="Acceso">Salir<img src="~/img/exit.png" /></a></li>
                     </ul>
                 </div>
             </nav>
