--- a/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Create.cshtml
@@ -8,33 +8,22 @@
 <h1 class="tituloMantenimiento">Mantenimiento Destino</h1>
 @if (@ViewBag.mensaje != null)
 {
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
         @ViewBag.mensaje
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
     </div>
 }
 
-@if (@ViewBag.mensajeEliminar != null)
-{
-    <div class="alert alert-primary" role="alert">
-        @ViewBag.mensajeEliminar
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
-    </div>
-}
 <div class="masterDivision">
     <div class="createUno">
         <h2>Agregar Categoria:</h2>
         <div class="formulario">
-        <form asp-action="Create">
+            <form asp-action="Create" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IdCategoria" class="control-label"></label>
-                <input asp-for="IdCategoria" class="form-control" />
-                <span asp-validation-for="IdCategoria" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+
+                <div class="col-md-5">
                 <label asp-for="NombreCategoria" class="control-label"></label>
                 <input asp-for="NombreCategoria" class="form-control" />
                 <span asp-validation-for="NombreCategoria" class="text-danger"></span>
