--- a/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Edit.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Edit.cshtml
@@ -7,14 +7,15 @@
 <div class="editarCuadro">
     <h2>Editar Categoria</h2>
 
-    @if (@ViewBag.mensajeEliminar != null)
+    @if (@ViewBag.mensajeEditar != null)
     {
-        <div class="alert alert-primary" role="alert">
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
             @ViewBag.mensajeEditar
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 
         </div>
     }
+   
     <div class="formularioEdit">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
