--- a/ProjectAtipax/ProjectAtipax/Views/Atipax/Resumen.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Atipax/Resumen.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Resumen";
 }
 <link href="~/css/styleAtipax.css" rel="stylesheet" />
+<div>
 <h1>Detalle de la compra</h1>
 
 <div class ="tablaResumen">
@@ -110,3 +111,4 @@
     <a asp-action="Comprar" class="btn btn-primary">Registrar Compra</a>
 </div>
 
+</div>
