--- a/ProjectAtipax/ProjectAtipax/Views/ManteTour/_ParcialTour.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteTour/_ParcialTour.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProjectAtipax.Models.Tour>
 
 <table class="table">
-    <thead>
+    <thead class="table-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.idTour)
