--- a/ProjectAtipax/ProjectAtipax/Views/Atipax/Portal.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Atipax/Portal.cshtml
@@ -20,49 +20,28 @@
     </div>
 
 </div>
+<div class="row row-cols-1 row-cols-md-2 g-4 porCol">
+@foreach (var item in Model)
+{
 
+<div class="col">
+            <div class="card  caPo text-dark bg-light mb-3 ">
+        <div class="card-body">
+           
+                <h5 class="card-title titul alinear">@Html.DisplayFor(modelItem => item.pais), @Html.DisplayFor(modelItem => item.ciudad)</h5>
+                <p class="card-text alinear">@Html.DisplayFor(modelItem => item.categoriaHotel) </p>
+                <p class="card-text alinear">  @Html.DisplayFor(modelItem => item.descripcionTour)</p>
+                <p class="card-text alinear"> Cupos:    @Html.DisplayFor(modelItem => item.UnidadesEnExistencia) </p>
+                 <hr />
+                <p class="card-text alinear linkSeleccion"><img src="~/img/imgDetalle.png">@Html.ActionLink("Ver Detalle", "Seleccionar", new {id=item.idDestino })</p>
+                <p class="card-text codDes alinear">@Html.DisplayFor(modelItem => item.idDestino) </p>
+            
+        </div>
 
-
-<div class="portal">
-    @foreach (var item in Model)
-    {
-            <div class="registro">
-      
-                <div class="row">
-
-                <div class="col-sm-12 espacio">
-                    <label>Código:       @Html.DisplayFor(modelItem => item.idDestino)  </label>
-                   
-                </div>
-                <div class="col-sm-12 espacio">
-                    <label class="labelPais">
-                        @Html.DisplayFor(modelItem => item.pais), @Html.DisplayFor(modelItem => item.ciudad)
-                    </label>
-                </div>
-
-                <div class="col-sm-12 espacio">
-                    <label>Hotel:       @Html.DisplayFor(modelItem => item.nomHotel)   </label>
-                  
-                </div>
-                <div class="col-sm-12 espacio">
-                    <label>Categoria del Hotel:     @Html.DisplayFor(modelItem => item.categoriaHotel)  </label>
-                    
-                 </div>
-                <div class="col-sm-12 espacio">
-                    <label>Tour:       @Html.DisplayFor(modelItem => item.descripcionTour) </label>
-                    
-                </div>
-                <div class="col-sm-12 espacio">
-                    <label>Cupos:       @Html.DisplayFor(modelItem => item.UnidadesEnExistencia)</label>
-                </div>
-
-                <p class="linkSeleccion"><img src="~/img/imgDetalle.png">@Html.ActionLink("Ver Detalle", "Seleccionar", new {id=item.idDestino })</p>
-                
-                </div>
-            </div>
-    }
+    </div>
 </div>
 
-
+}
+</div>
 
 
