--- a/ProjectAtipax/ProjectAtipax/Views/Atipax/Resumen.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Atipax/Resumen.cshtml
@@ -4,111 +4,43 @@
     ViewData["Title"] = "Resumen";
 }
 <link href="~/css/styleAtipax.css" rel="stylesheet" />
-<div>
-<h1>Detalle de la compra</h1>
 
-<div class ="tablaResumen">
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.codigo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.pais)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ciudad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.nomHotel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.categoriaHotel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.precioHotel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NombreCategoria)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.descripcionTour)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.precioTour)
-            </th>
+<div class="row row-cols-1 row-cols-md-2 g-4 resCol">
+@foreach (var item in Model)
+    {
+        <div class="col">
+        <div class="card caResu text-dark bg-light mb-3 ">
+            <div class="card-body">
+                <div class="card-header">Resumen de Compra</div>
+      
+                <p class="card-text">  @Html.DisplayFor(modelItem => item.pais), @Html.DisplayFor(modelItem => item.ciudad)</p>
+                <p class="card-text"> Hotel:    @Html.DisplayFor(modelItem => item.nomHotel) </p>
+                <p class="card-text"> Precio Hotel:   @Html.DisplayFor(modelItem => item.precioHotel) </p>
+                <p class="card-text">Tour:  @Html.DisplayFor(modelItem => item.descripcionTour)</p>
+                <p class="card-text">Precio Tour:   @Html.DisplayFor(modelItem => item.precioTour) </p>
+                <p class="card-text"> N° personas: @Html.DisplayFor(modelItem => item.cantidad)</p>
+                <p class="card-text "> Precio del Paquete: @Html.DisplayFor(modelItem => item.monto)</p>
+                <p class="card-text hi">@Html.DisplayFor(modelItem => item.codigo) @Html.DisplayFor(modelItem => item.NombreCategoria) @Html.DisplayFor(modelItem => item.categoriaHotel) @Html.DisplayFor(modelItem => item.UnidadesEnExistencia)</p>
+                <hr />
+               
+                    <button class="btn btn btn-danger"> @Html.ActionLink("Eliminar Compra", "Delete", new { id=item.codigo }) <img src="~/img/eliminar.png" class="eliminar" /></button>
 
-            <th>
-                @Html.DisplayNameFor(model => model.UnidadesEnExistencia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.cantidad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.monto)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.codigo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.pais)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ciudad)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.nomHotel)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.categoriaHotel)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.precioHotel)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NombreCategoria)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.descripcionTour)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.precioTour)
-                </td>
-     
-                <td>
-                    @Html.DisplayFor(modelItem => item.UnidadesEnExistencia)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.cantidad)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.monto)
-                </td>
-                <td>
-                    @Html.ActionLink("Delete", "Delete", new { id=item.codigo })
-                </td>
-            </tr>
-        }   <!--agregar el total del monto-->
-        <tr>
-            <td colspan="8">Total:</td>
-            <td>@Model.Sum(c=>c.monto)</td>
-        </tr>
-    </tbody>
-</table>
+            </div>
+  
+        </div>
+        </div>
+    }
 </div>
-
-
+<hr />
+<div class="totalPagar">
+    <p class="card-text">
+        Total a Pagar(/S.):      @Model.Sum(c=>c.monto)
+    </p>
+</div>
+<hr />
 <div class="botonesResumen">
-    <a asp-action="Portal" class="btn btn-primary">Ir a la Tienda</a>
-    <a asp-action="Comprar" class="btn btn-primary">Registrar Compra</a>
+    
+    <a asp-action="Portal" class="btn btn-primary">Buscar otro destino</a>
+    <a asp-action="Comprar" class="btn btn-primary">Comprar</a>
 </div>
 
-</div>
