--- a/ProjectAtipax/ProjectAtipax/Views/ManteHotel/_ParcialHotel.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteHotel/_ParcialHotel.cshtml
@@ -2,7 +2,7 @@
 
 
 <table class="table">
-    <thead>
+    <thead class="table-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.idHotel)
