--- a/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Create.cshtml
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="form-group botonAgregar">
-                <input type="submit" value="Agregar Destino" class="btn btn-primary" />
+                    <input type="submit" value="Agregar Destino" class="btn btn-outline-success" />
             </div>
         </form>
     </div>
