--- a/ProjectAtipax/ProjectAtipax/Views/ManteDestino/_ParcialDestino.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteDestino/_ParcialDestino.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<ProjectAtipax.Models.Destino>
 
 
-<table class="table">
-    <thead class="table-dark">
+<table class="table table-striped">
+    <thead >
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.idDestino)
