--- a/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class="tituloMantenimiento">Mantenimiento Destino</h1>
+<h1 class="tituloMantenimiento">Mantenimiento Categoria</h1>
 @if (@ViewBag.mensaje != null)
 {
     <div class="alert alert-primary alert-dismissible fade show" role="alert">
@@ -29,7 +29,7 @@
                 <span asp-validation-for="NombreCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-outline-success" />
             </div>
         </form>
     </div>
