--- a/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Edit.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteCategoria/Edit.cshtml
@@ -30,8 +30,8 @@
                 <span asp-validation-for="NombreCategoria" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Actualizar" class="btn btn-primary" />
-                <a asp-action="Create" class="btn btn-primary">Volver</a>
+                <input type="submit" value="Actualizar" class="btn btn-outline-success" />
+                <a asp-action="Create" class="btn btn-outline-success">Volver</a>
 
             </div>
         </form>
