--- a/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Edit.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteDestino/Edit.cshtml
@@ -55,8 +55,8 @@
               
    
             <div class="form-group">
-                <input type="submit" value="Actualizar" class="btn btn-primary" />
-                <a asp-action="Create" class="btn btn-primary">Volver</a>
+                <input type="submit" value="Actualizar" class="btn btn-outline-success" />
+                <a asp-action="Create" class="btn btn-outline-success">Volver</a>
             </div>
         </form>
     </div>
