--- a/ProjectAtipax/ProjectAtipax/Views/ManteHotel/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteHotel/Create.cshtml
@@ -45,7 +45,7 @@
             </div>
          
                     <div class="form-group botonAgregar">
-                    <input type="submit" value="Agregar Hotel" class="btn btn-primary" />
+                    <input type="submit" value="Agregar Hotel" class="btn btn-outline-success" />
             </div>
         </form>
     </div>
