--- a/ProjectAtipax/ProjectAtipax/Views/ManteTour/Create.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/ManteTour/Create.cshtml
@@ -35,7 +35,7 @@
                     <span asp-validation-for="descripcionTour" class="text-danger"></span>
                 </div>
                 <div class="form-group botonAgregar">
-                    <input type="submit" value="Agregar Tour" class="btn btn-primary" />
+                    <input type="submit" value="Agregar Tour" class="btn btn-outline-success" />
                 </div>
             </form>
         </div>
