--- a/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
+++ b/ProjectAtipax/ProjectAtipax/Views/Shared/_Layout.cshtml
@@ -53,6 +53,10 @@
                         {
                             <li><a asp-action="Create" asp-controller="ManteDestino">Destino</a></li>
                         }
+                         @if (User.IsInRole("Administrador"))
+                        {
+                            <li><a asp-action="ConsultarPedido" asp-controller="Consultas">Consulta</a></li>
+                        }
                       
                         <li> <a asp-action="Salir" asp-controller="Acceso">Salir<img src="~/img/exit.png" /></a></li>
                     </ul>
